CustomObjects/objects/invoiceit_s__Usage_Staging__c.object
<CustomObject>
    <fields>
        <fullName>invoiceit_s__ErrorReason__c</fullName>
        <label>Error Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Import_File_Data__c</fullName>
        <formula>Name+&apos;,&apos;+invoiceit_s__OrderRatePlanCharge__c+&apos;,&apos;+TEXT(invoiceit_s__StagingStartDate__c)+&apos;,&apos;+TEXT(invoiceit_s__StagingEndDate__c)+&apos;,&apos;+TEXT(invoiceit_s__Quantity__c)</formula>
        <label>Import File Data</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__OrderRatePlanCharge__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Order Rate Plan Charge</label>
        <referenceTo>invoiceit_s__Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Usage Staging</relationshipLabel>
        <relationshipName>Usage_Staging</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__StagingEndDate__c</fullName>
        <label>Staging End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__StagingStartDate__c</fullName>
        <label>Staging Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__UsageMediation__c</fullName>
        <label>Usage Mediation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Usage Staging</label>
    <nameField>
        <displayFormat>USN-{0000}</displayFormat>
        <label>Usage Staging Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>invoiceit_s__Cannot_change_status_from_Completed</fullName>
        <active>true</active>
        <description>Cannot change the status from Completed to other</description>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE
(invoiceit_s__Status__c),
&quot;Completed&quot;) &amp;&amp; ISCHANGED(invoiceit_s__Status__c)</errorConditionFormula>
        <errorMessage>You cannot change the status of a Completed Usage Staging</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>invoiceit_s__Staging_End_Date</fullName>
        <active>true</active>
        <description>Staging End Date should be greater than Staging Start Date. 
Note : Time is not consider as part of this rule</description>
        <errorConditionFormula>invoiceit_s__StagingStartDate__c &gt; invoiceit_s__StagingEndDate__c</errorConditionFormula>
        <errorDisplayField>invoiceit_s__StagingEndDate__c</errorDisplayField>
        <errorMessage>Staging End Date should be greater than Staging Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>invoiceit_s__Staging_End_Date_Between_Charge_Dates</fullName>
        <active>true</active>
        <description>This will make sure Staging End Date will be in between Order Charge Service Activation and Service End Dates
Note : Time is not consider as part of this rule</description>
        <errorConditionFormula>If(DATEVALUE(invoiceit_s__StagingEndDate__c) &lt; invoiceit_s__OrderRatePlanCharge__r.invoiceit_s__Service_Activation_Date__c
||
invoiceit_s__OrderRatePlanCharge__r.invoiceit_s__Service_End_Date__c &lt; DATEVALUE(invoiceit_s__StagingEndDate__c), true, false)</errorConditionFormula>
        <errorMessage>Staging End Date should be in between Order Charge Service Activation and Service End Dates (included)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>invoiceit_s__Staging_Start_Date_Between_Charge_Dates</fullName>
        <active>true</active>
        <description>This will make sure Staging Start Date will be in between Order Charge Service Activation and Service End Dates
Note : Time is not consider as part of this rule</description>
        <errorConditionFormula>If(DATEVALUE(invoiceit_s__StagingStartDate__c) &lt; invoiceit_s__OrderRatePlanCharge__r.invoiceit_s__Service_Activation_Date__c 
|| 
invoiceit_s__OrderRatePlanCharge__r.invoiceit_s__Service_End_Date__c &lt; DATEVALUE(invoiceit_s__StagingStartDate__c), true, false)</errorConditionFormula>
        <errorMessage>Staging Start Date should be in between Order Charge Service Activation and Service End Dates (included)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>invoiceit_s__Staging_Status_for_New_should_be_Queued</fullName>
        <active>true</active>
        <description>Staging Status for New should be Queued</description>
        <errorConditionFormula>ISNEW() &amp;&amp; NOT(ISPICKVAL(invoiceit_s__Status__c, &quot;Queued&quot;))</errorConditionFormula>
        <errorMessage>Staging Status should be Queued</errorMessage>
    </validationRules>
</CustomObject>